local-k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: three-tier-app
  labels:
    app: three-tier-app-fr
spec:
  selector:
    matchLabels:
      app: three-tier-app-fr
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: three-tier-app-fr
    spec:
      containers:
      - name: three-tier-app-frontend
        image: to-do-fr:latest
        imagePullPolicy: Never
        # resources:
        #   requests:
        #     cpu: 100m
        #     memory: 200Mi
        #   limits:
        #     cpu: 100m
        #     memory: 200Mi
        ports:
        - containerPort: 80
          name:  frontend-port
      restartPolicy: Always
